--- a/css/elusive-webfont.css
+++ b/css/elusive-webfont.css
@@ -7,6 +7,7 @@
 		url('../fonts/Elusive-Icons.svg#Elusive-Icons') format('svg');
 	font-weight: normal;
 	font-style: normal;
+	
 }
 
 [class*="el-icon-"] {
@@ -17,8 +18,8 @@
 	font-variant: normal;
 	text-transform: none;
 	line-height: 1;
-	font-size:3em;
-
+	font-size:2.5em;
+	color: #156888;
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
